--- a/package.json
+++ b/package.json
@@ -9,27 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-slot": "^1.1.2",
-    "axios": "^1.9.0",    "class-variance-authority": "^0.7.1",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.477.0",
-    "motion": "^12.5.0",
+    "motion": "^12.12.1",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
-
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-
     "tw-elements-react": "^1.0.0-alpha-end",
     "yup": "^1.6.1"
-
   },
   "devDependencies": {
     "@types/node": "^20",
